k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-api
spec:
  selector:
    app: contact-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
